--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -7,6 +7,7 @@
    ========================================================================== */
 
 $doc-font-size: 16 !default;
+$doc-font-weight: 400;
 
 /* paragraph indention */
 $paragraph-indent: false !default; // true, false (default)
