--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -7,7 +7,6 @@
    ========================================================================== */
 
 $doc-font-size: 16 !default;
-$doc-font-weight: 400;
 
 /* paragraph indention */
 $paragraph-indent: false !default; // true, false (default)
@@ -15,7 +14,7 @@ $indent-var: 1.3em !default;
 
 /* system typefaces */
 $serif: Georgia, Times, serif !default;
-$sans-serif: -apple-system, BlinkMacSystemFont,"Dongle", /*"Jua",*/ "Roboto", "Segoe UI",
+$sans-serif: -apple-system, BlinkMacSystemFont, "Jua", "Roboto", "Segoe UI",
   "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
 $monospace: Monaco, Consolas, "Lucida Console", monospace !default;
 
